# SentinelX_

./: .gitignore  LICENSE  README.md  docker-compose.yml  futurescope.md  walkthrough.md
.github/workflows/: ci.yml  cross_platform_ci.yml
agents/: agent_mesh.py  test_agent_mesh.py  test_resilience.py  workflow_manager.py
agents/config/: settings.py
apps/citizen-mobile/: App.tsx  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/command-centre/: index.html  package-lock.json  vite.config.ts
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: pubspec.yaml
deploy/k8s/: gateway-deployment.yaml  hpa.yaml  microservices-deployment.yaml  namespace.yaml  secrets.yaml
deploy/observability/: grafana_dashboards.json  prometheus.yml
docs/: ARCHITECTURE_DIAGRAM.md  GOOGLE_CLOUD_CONSOLE_SETUP.md  SENTINELX_PITCH_DECK.md  SENTINELX_PRESENTATION_SLIDES.html  SSO_SETUP_GUIDE.md  executive_summary.md
docs/adr/: ADR-001-fastapi.md  ADR-002-tauri.md  ADR-003-kafka.md  ADR-004-neo4j.md  ADR-005-react-vite.md
docs/architecture/: baseline_audit.md  cross_platform_architecture.md  dependency_graph.md  slo_compliance_matrix.md  system_diagram.md  technical_debt_report.md
docs/benchmarks/: benchmark_methodology.md
docs/demonstration/: e2e_demo_guide.md
docs/deployment/: desktop_setup.md  mobile_setup.md
docs/governance/: risk_register.md
docs/user_guides/: desktop_user_guide.md  (+1 more)
(+65 files in other folders)
