[package]
name = "sentinelx-desktop"
version = "2.0.0"
description = "SentinelX Desktop Application powered by Tauri 2.0"
authors = ["SentinelX Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
